[gd_scene load_steps=11 format=3 uid="uid://ve78yrkt57pv"]

[ext_resource type="Script" uid="uid://ciylsoesw2ygt" path="res://credits.gd" id="1_4av4j"]
[ext_resource type="Script" uid="uid://c3ipx24mbdth7" path="res://creditws.gd" id="1_h30m1"]
[ext_resource type="AudioStream" uid="uid://7fukcxcpyv02" path="res://menu de exhibicion/vhs-lca.mp3" id="2_5em78"]
[ext_resource type="FontFile" uid="uid://d7hubcc5m44q" path="res://beatcheck/Blue Screen Personal Use.ttf" id="3_h30m1"]
[ext_resource type="PackedScene" uid="uid://drgge65mbyqsh" path="res://shader/shader.tscn" id="4_3mii5"]
[ext_resource type="Texture2D" uid="uid://c1tp7pqe622b5" path="res://icon.svg" id="5_r4875"]
[ext_resource type="AudioStream" uid="uid://cseooimepugnn" path="res://menu de exhibicion/vhs-noise.mp3" id="6_g735x"]
[ext_resource type="AudioStream" uid="uid://dsog7e78diw0s" path="res://beatcheck/type.mp3" id="7_5em78"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lnt0k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_604bw"]

[node name="credits" type="Node2D"]
script = ExtResource("1_h30m1")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 339.0
offset_top = 478.0
offset_right = 611.0
offset_bottom = 706.0
theme_override_colors/default_color = Color(0, 1, 0.2166667, 1)
theme_override_fonts/normal_font = ExtResource("3_h30m1")
theme_override_font_sizes/normal_font_size = 40
text = "TECDEVS 

ITESM
GDL, México"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_4av4j")

[node name="button" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource("2_5em78")
volume_db = 7.45
panning_strength = 1.04

[node name="Exhibition1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 265.0
offset_top = 218.99998
offset_right = 982.0
offset_bottom = 428.00006
scale = Vector2(0.40873227, 0.46215707)
theme_override_colors/font_color = Color(0.25, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0.82, 0.06833327, 1)
theme_override_fonts/font = ExtResource("3_h30m1")
theme_override_font_sizes/font_size = 80
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lnt0k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_604bw")
text = "-> return to game"
flat = true

[node name="BlackScreen" type="Sprite2D" parent="Control"]
visible = false
modulate = Color(0, 0, 0, 1)
position = Vector2(984.00006, 543)
scale = Vector2(16.04629, 8.490277)
texture = ExtResource("5_r4875")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(906, 583)
zoom = Vector2(1.41, 1.41)

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -6
position = Vector2(991, 539)
scale = Vector2(-15.78315, -10.249086)
texture = ExtResource("5_r4875")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_g735x")
volume_db = -0.81
autoplay = true

[node name="FadeCanvasLayer" parent="." instance=ExtResource("4_3mii5")]
scale = Vector2(2.415, 2.415)
transform = Transform2D(2.415, 0, 0, 2.415, 0, 0)

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 707.0
offset_top = 478.0
offset_right = 1510.0
offset_bottom = 706.0
theme_override_colors/default_color = Color(0, 1, 0.2166667, 1)
theme_override_fonts/normal_font = ExtResource("3_h30m1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[color=WHITE]Game Direction [/color]
Pablo Saúl González García
Ricardo Benjamin Marquez Palacios

"
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = 707.0
offset_top = 478.0
offset_right = 1510.0
offset_bottom = 706.0
theme_override_colors/default_color = Color(0, 1, 0.2166667, 1)
theme_override_fonts/normal_font = ExtResource("3_h30m1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[color=WHITE]Programming [/color]
Santiago Alonzo Aguilar
Pablo Saúl González García
Abril Trejo Limón"
scroll_following_visible_characters = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
offset_left = 707.0
offset_top = 478.0
offset_right = 1510.0
offset_bottom = 706.0
theme_override_colors/default_color = Color(0, 1, 0.2166667, 1)
theme_override_fonts/normal_font = ExtResource("3_h30m1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[color=WHITE]Pixel Art Design and Animations [/color]
Ricardo Benjamin Marquez Palacios
Pablo Saúl González García

"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
offset_left = 707.0
offset_top = 451.0
offset_right = 1510.0
offset_bottom = 679.0
theme_override_colors/default_color = Color(0, 1, 0.2166667, 1)
theme_override_fonts/normal_font = ExtResource("3_h30m1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "[color=WHITE]Music [/color]
Alexa Michel Covarrubias
Christopher González Solis"
horizontal_alignment = 1
vertical_alignment = 1

[node name="tecleo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_5em78")

[node name="RichTextLabel6" type="RichTextLabel" parent="."]
offset_left = 707.0
offset_top = 451.0
offset_right = 1510.0
offset_bottom = 679.0
theme_override_colors/default_color = Color(0, 1, 0.2166667, 1)
theme_override_fonts/normal_font = ExtResource("3_h30m1")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "THANKS FOR
PLAYING OUR GAME

made for GAMEOFF GAMEJAM"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Control/Exhibition1" to="Control" method="_on_exhibition_1_pressed"]
